fix so many typos

--- a/src/posts/published/adding-guards-to-our-use-reducer-fsm/index.mdx
+++ b/src/posts/published/adding-guards-to-our-use-reducer-fsm/index.mdx
@@ -96,7 +96,7 @@ const stateReducer = (state, event) => {
 }
 ```
 
-With that in place, our light bulb should be currently indestrutable. Try it out here.
+With that in place, our light bulb should be currently indestructable. Try it out here.
 
 <IndestructableBulb />
 
