--- a/src/posts/published/cyclomatic-complexity/index.mdx
+++ b/src/posts/published/cyclomatic-complexity/index.mdx
@@ -198,9 +198,9 @@ I think the most common reason to allow a part of a program to have a high level
 
 ![A drawing of a program with a single input, single condition, and many outputs](/images/many-cycles.jpg)
 
-The reason this makes sense is that the condition and mapping to appropriate results has to happen _somewhere_ in our program. It might as well be in an _isolated_ and _ecapsulated_ place. That place should often be a well named (and tested) function that only handles a single part of our program.
+The reason this makes sense is that the condition and mapping to appropriate results has to happen _somewhere_ in our program. It might as well be in an _isolated_ and _encapsulated_ place. That place should often be a well named (and tested) function that only handles a single part of our program.
 
-The ecapsulation of the complexity is key here. Remember, we cannot change `X` (the overall complexity) and have the same program. We know we must have this complexity somewhere, but by grouping it like this, we reduce exposure of the _internal_ complexity to rest of our program. We essentially make a contract with ourselves and anyone who may work on this code in the future, "We have contained the complexity, do not let it leak out."
+The encapsulation of the complexity is key here. Remember, we cannot change `X` (the overall complexity) and have the same program. We know we must have this complexity somewhere, but by grouping it like this, we reduce exposure of the _internal_ complexity to rest of our program. We essentially make a contract with ourselves and anyone who may work on this code in the future, "We have contained the complexity, do not let it leak out."
 
 The most common example I can think of in modern web development would be a state reducer, _a la_ Redux or the `useReducer` hook. For those who are not sure what a state reducer is, a state reducer is a function that accepts a `state` and an `action` argument and returns the `nextState`. The `action`s passed to this reducer might be of _many_ different types, and each must be accounted for. This results in a function that has a single condition (what `type` of `action` is this?), but many possible results. Breaking this apart might only make the program more difficult to use or reason about. Capturing it in a single function makes the most sense, even if the complexity score might be very high.
 
