--- a/src/posts/published/from-pastor-to-programmer/index.mdx
+++ b/src/posts/published/from-pastor-to-programmer/index.mdx
@@ -24,7 +24,7 @@ At the same time, I took my first philosophy course. I was immediately hooked. I
 
 ### How Philosophy Lead to Theology
 
-I earned athletic and academic scholarships to attend Lenoir-Rhyne University in Hickory, North Carolina and transferred there my junior year. The Southeast was quite the culture shock for me. I had never visited before my transfer and didn't know what to expect. One of the biggest culture shocks was moving right into the heart of the Bible Belt. I had never seen such overt religiousity in my life. While I was raised in a Lutheran church and considered myself a Christian, I did not share the same passion for Jesus as many of peers and elders did. It was eye-opening and life changing.
+I earned athletic and academic scholarships to attend Lenoir-Rhyne University in Hickory, North Carolina and transferred there my junior year. The Southeast was quite the culture shock for me. I had never visited before my transfer and didn't know what to expect. One of the biggest culture shocks was moving right into the heart of the Bible Belt. I had never seen such overt religiosity in my life. While I was raised in a Lutheran church and considered myself a Christian, I did not share the same passion for Jesus as many of peers and elders did. It was eye-opening and life changing.
 
 One night, late my junior year, I had an epiphany of sorts where I felt overwhelmingly compelled to devote myself to Jesus and his teachings. I became highly involved in a local church and various campus ministries. This was really the beginning of my ministry career.
 
