--- a/src/posts/published/goals-for-2018/index.mdx
+++ b/src/posts/published/goals-for-2018/index.mdx
@@ -9,7 +9,7 @@ My goals in no particular order are:
 
 ### Get Better at Prolific Creation, Worse at Prolific Consumption
 
-This thought has been on my mind a lot lately. It's a bit too easy to be a prolific consumer these days. Youtube, Netflix, Twitter, Facebook, Slack, Discord, tutorials (yes, learning can be thrown in here if you don't ever _do_ anything with it) etc. There is a never ending stream of content to consume and I do it all too gladly. I genuinely think it's a good thing to participate in these communities _but_ it has to be balanced with creating. I'm disappointed with the the ratio of my creativity/consumption at the moment.
+This thought has been on my mind a lot lately. It's a bit too easy to be a prolific consumer these days. YouTube, Netflix, Twitter, Facebook, Slack, Discord, tutorials (yes, learning can be thrown in here if you don't ever _do_ anything with it) etc. There is a never ending stream of content to consume and I do it all too gladly. I genuinely think it's a good thing to participate in these communities _but_ it has to be balanced with creating. I'm disappointed with the the ratio of my creativity/consumption at the moment.
 
 If I am envious of anyone in this world, it is the people who are consumed with creating new things. I envy the amazing things they make and their relentlessness in shipping new things. I would place several of my coding role models in this category. I even went on a whole Twitter rant about this the other day. Making things is the fastest way to get better at things. I waste too much time _thinking_ about things I'd like to build (or try building), and not enough time actually building.
 
@@ -45,7 +45,7 @@ It would be really nice if I could pair some of this travel with some of my othe
 
 I would really like to keep pursuing speaking at conferences. I really enjoy public speaking (call me crazy) and I love getting to meet new people and help them learn or be inspired. But it's challenging to get in and get accepted. The amount of people pursuing this goal is increasing. It only makes this harder. It doesn't mean it's impossible though, I just have to be more clever about it.
 
-I have to work on a few more talk ideas, take the time to have my abstracts saved in place I can easily copy/paste from, and then actively search for CFPs. I'm kind of bad at all of those things right now. Good at the speaking, bad at the organization. Again, I need more discipline. That will have to change in 2018 to acheive this goal.
+I have to work on a few more talk ideas, take the time to have my abstracts saved in place I can easily copy/paste from, and then actively search for CFPs. I'm kind of bad at all of those things right now. Good at the speaking, bad at the organization. Again, I need more discipline. That will have to change in 2018 to achieve this goal.
 
 Related to this, I plan to continue the Second Career Devs in 2018 and hopefully make it a lot better. I think I can continue to improve the production value and find some amazing stories. I really hope to keep building this community up in 2018 and see what happens from it.
 
