--- a/src/posts/published/graphs-are-everywhere/index.mdx
+++ b/src/posts/published/graphs-are-everywhere/index.mdx
@@ -54,7 +54,7 @@ It should also be noted that there can exist mutual admiration, and there can be
 
 ---
 
-The third piece in the gallery is something I've always struggled with, _Loneliness_. Without going into too many details here, I was always on the outside growing up. Even as a pretty successful adult, who's on the _in_ for many circles, I still often feel lonely. I've come to learn more about myself over the years, to understand the reasons why I feel this way, but knowing why doesn't eliminate experiecing the feeling. If you've ever felt lonely, you've experienced this graph first hand.
+The third piece in the gallery is something I've always struggled with, _Loneliness_. Without going into too many details here, I was always on the outside growing up. Even as a pretty successful adult, who's on the _in_ for many circles, I still often feel lonely. I've come to learn more about myself over the years, to understand the reasons why I feel this way, but knowing why doesn't eliminate experiencing the feeling. If you've ever felt lonely, you've experienced this graph first hand.
 
 <DirectedGraph
   caption="Loneliness"
