--- a/src/posts/published/head-scratcher-1-2d-array-from-array-of-objects/index.mdx
+++ b/src/posts/published/head-scratcher-1-2d-array-from-array-of-objects/index.mdx
@@ -7,7 +7,7 @@ title: 'Head Scratcher #1'
 relevantCourseNickname: 'dsa'
 ---
 
-I am starting a randomly occuring series called "Head Scratchers." At least once a week (probably once a day), I run into a problem that makes me scratch my head for while. So I'm going to share the problem and my solution with you. If you think of a better way to solve the problem, I want to see it in the comments below.
+I am starting a randomly occurring series called "Head Scratchers." At least once a week (probably once a day), I run into a problem that makes me scratch my head for while. So I'm going to share the problem and my solution with you. If you think of a better way to solve the problem, I want to see it in the comments below.
 
 ### The Problem
 
