--- a/src/posts/published/just-enough-fp-immutability/index.mdx
+++ b/src/posts/published/just-enough-fp-immutability/index.mdx
@@ -79,10 +79,10 @@ const arr = [5, 3, 2, 4, 1]
  * method receives. This returns a new function.
  *
  * 2. The second argument (the first of the second function) is our array
- * to operate on. This implicity returns the value to the right of the =>
+ * to operate on. This implicitly returns the value to the right of the =>
  *
  * 3. We create a new array and spread the items of the original array into it
- * so as not to make any mutations to the orginal array.
+ * so as not to make any mutations to the original array.
  *
  * 4. We now perform the sort operation on the _new array_, leaving the old
  * one intact
