--- a/src/posts/published/pattern-matching/index.mdx
+++ b/src/posts/published/pattern-matching/index.mdx
@@ -87,7 +87,7 @@ function areWeThereYet(milesToGo) {
       return 'Almost. Just a little further.'
 
     case milesToGo <= 100:
-      return 'A litle more than an hour.'
+      return 'A little more than an hour.'
 
     case milesToGo <= 250:
       return 'Just a half day away.'
