--- a/src/posts/published/review-2018-goals/index.mdx
+++ b/src/posts/published/review-2018-goals/index.mdx
@@ -33,7 +33,7 @@ Yeah... this didn't happen. In fact, I got a lot worse. Hurt my back in three pl
 
 ### Financial Fitness
 
-We did well at this (finally, a win)! I really learned a lot about how to be better with finances. I rolled over all my 401Ks, we started budgeting with [YNAB (shamless referral link here)](https://ynab.com/referral/?ref=LYFmWa7NnaXUdCxR&utm_source=customer_referral) which has been great for us. I even setup some general investing accounts and a retirement account for Anna. It's been a solid year, even despite losing my job.
+We did well at this (finally, a win)! I really learned a lot about how to be better with finances. I rolled over all my 401Ks, we started budgeting with [YNAB (shameless referral link here)](https://ynab.com/referral/?ref=LYFmWa7NnaXUdCxR&utm_source=customer_referral) which has been great for us. I even setup some general investing accounts and a retirement account for Anna. It's been a solid year, even despite losing my job.
 
 I can't stress enough how much YNAB has helped. It's helped me plan for joy in our lives, like golf for me and books and more for Anna. It's helped us find little bits of money to put to the student loans to pay them faster. And it was the biggest help when I lost my job, because we were able to budget our money and see precisely what part of our savings were being used for what and how much of it we were dipping in to (and it hasn't been as bad as we thought it might be).
 
