--- a/src/posts/published/the-future-of-SCD/index.mdx
+++ b/src/posts/published/the-future-of-SCD/index.mdx
@@ -21,11 +21,11 @@ The next time was when people complained I didn't have an episode out when I sai
 
 The next time was when someone more or less yelled at me publicly demanding to know when they would be a guest on the podcast. There was no sense of "guests are invited", it was total entitlement, "I added myself to your guestlist, so I demand to be on your podcast". Felt pretty shitty on that one, too.
 
-Then another time was when it dawned on me just how much time goes into making a _single_ episode. The act of finding a guest, scheduling the guest, recording the episode, editing, doing the admin to load the episode, update the website, etc, it amounts from 4-8 hours per episode, depending on how innefficient the process went. You can't shrink the time of recording, it takes what it takes. Editing takes at minimum the time it took to record. Scheduling is a nightmare. Everyone's always busy (including myself). If I were to try and put out an episode every week, we're talking between 200-400 hours of work in a year. That's 10-20% more work in my week. For what? Nothing. I make absolutely nothing from making a podcast.
+Then another time was when it dawned on me just how much time goes into making a _single_ episode. The act of finding a guest, scheduling the guest, recording the episode, editing, doing the admin to load the episode, update the website, etc, it amounts from 4-8 hours per episode, depending on how inefficient the process went. You can't shrink the time of recording, it takes what it takes. Editing takes at minimum the time it took to record. Scheduling is a nightmare. Everyone's always busy (including myself). If I were to try and put out an episode every week, we're talking between 200-400 hours of work in a year. That's 10-20% more work in my week. For what? Nothing. I make absolutely nothing from making a podcast.
 
 Ok, so I can remedy that with ads and sponsors, right? Except they're just as flaky as guests. Now I have to get real contracts together, come up with rates and invoices and budgets and on and on and on. And if I do that I might want to start an LLC and all of a sudden I'm running a business I never planned on and that's more time and more energy being taken from me.
 
-But the money is good, right? Kind of. It was nice to ask for some money and get it, but I used most of the sponsor money I made to pay for transcripts. Every episode with a transcript costs $1/minute to get transcribed by the most affordable service I can find. I was very happy with their work, but now each episode costs me $45-$60. I'm not complaining that accessibility costs money. I believe that making the podcast available to people is a good thing. It's simply a cost I never considered and didn't have a strategy to afford.
+But the money is good, right? Kind of. It was nice to ask for some money and get it, but I used most of the sponsor money I made to pay for transcripts. Every episode with a transcript costs $1/minute to get transcribed by the most affordable service I can find. I was very happy with their work, but now each episode costs me $45-\$60. I'm not complaining that accessibility costs money. I believe that making the podcast available to people is a good thing. It's simply a cost I never considered and didn't have a strategy to afford.
 
 "What about Patreon, Kyle? What about donations to keep this going?" Still more work, plus I'm now begging for help _and_ now I'm obligated to other people in a way I wasn't before. If someone makes a donation and I can't come up with a guest or the time or energy to finish a new episode, I've now let them down, too.
 
