--- a/src/posts/published/the-future-of-SCD/index.mdx
+++ b/src/posts/published/the-future-of-SCD/index.mdx
@@ -4,7 +4,7 @@ slug: 'the-future-of-second-career-devs'
 title: 'The Future of Second Career Devs'
 description: 'I started the Second Career Devs podcast in 2017 with a lot of excitement and hope. Let me tell you where my head is at now on the project'
 tags: ['Second Career Devs', 'Podcast']
-relatedPostsSlugs: ['i-started-a-podcast']
+relatedPostsSlugs: []
 ---
 
 ![Second Career Devs Logo](./images/scdLogoWide.jpg)
