update memoization post

--- a/src/posts/published/memoization/index.mdx
+++ b/src/posts/published/memoization/index.mdx
@@ -14,7 +14,7 @@ import Factorializer from './Factorializer'
 
 Recently, I spent an hour with one of my protégés <Marker content={`"Mentee" is not a word. <a href="https://twitter.com/kyleshevlin/status/1253460305885016065?s=20">I've stated this before</a>.`} /> demonstrating some common advanced techniques we use at Webflow. One of the techniques I showed them was **memoization**. <Marker content="Not a typo." /> Let's learn what memoization is, why you might use it, and how do we write it from scratch.
 
-Memoization is a technique that enhances a function by creating and using a `cache` to store and retrieve results of that function. Memoization uses the arguments of the function to create a `key` for the `cache`. The first time a memoized function is called with a set of arguments, those arguments are turned into a `key` and the result of the function is stored as the value at that `key`'s location in the `cache`. Then, on subsequent calls of the function with the same arguments, we can retrieve that previously calculated value from the `cache` and return it before we ever do the work of calculating the result. This improves the performance of our function, since hitting the `cache` is a constant time operation of `O(1)`.
+Memoization is a technique that enhances a function by creating and using a `cache` to store and retrieve results of that function. Memoization uses the arguments of a function to create a `key` for the `cache`. The first time a memoized function is called with a set of arguments, those arguments are turned into a `key` and the result of the function is stored as the value for that `key` in the `cache`. Then, on subsequent calls of the function with the same arguments, we can retrieve that previously calculated value from the `cache` and return it before we ever do the work of calculating the result. This improves the performance of our function, since hitting the `cache` is a constant time operation (`O(1)` in big O notation).
 
 We can use memoization on any [pure function](/just-enough-fp-pure-functions) and it's not too difficult to implement either. Let's create a [higher order function](/just-enough-fp-higher-order-functions) that will allow us to create a memoized version of a pure function.
 
@@ -80,7 +80,7 @@ Let's try it out. I've made a component below that allows you to give it two num
 
 ### Why Use Memoization?
 
-Memoization is a tradeoff exchanging space (memory) for time. The purpose of this tradeoff is to gain a performance benefit by skipping the calculation of the function's result, i.e. save time. Thus, it only make sense to use memoization in a situation where memory space is not a concern and the original calculation is expensive and called often with the same arguments. Our `add` function was a bad example. It's not an expensive calculation at all. Let's create a slightly better example.
+Memoization is a tradeoff exchanging space (memory) for time. The purpose of this tradeoff is to gain a performance benefit by skipping the calculation of the function's result, i.e. save time. Thus, it only makes sense to use memoization where memory is not a concern and the original calculation is both expensive and often called with the same arguments. Our `add` function was a bad example. It's not an expensive calculation at all. Let's create a slightly better example.
 
 I've used this example before in my writing, but a `factorial` function might be a good candidate for memoization. It's recursive, which means that `factorial` will be called with the same argument frequently. In fact, if it's ever been called with a number _greater than_ the current argument, it will simply return the value from the cache, since it's already been calculated before. Let's write the factorial function.
 
