Add word for correctness

--- a/src/posts/published/headlight-vision/index.mdx
+++ b/src/posts/published/headlight-vision/index.mdx
@@ -13,7 +13,7 @@ I've been struggling a lot lately with my inner self-talk. It's never been all t
 
 "Great opener, Kyle! Really got us in good spirits!" you say.
 
-I know, but bear with me. Part of why I get like this is I am _wired_ to look people more successful than me and compare myself to them. I could write endlessly about people I admire and could never be like. Whenever I get like this, stuck in my comparisons, I try and think about a metaphor that my friend [Jason Lengstorf](https://twitter.com/jlengstorf) shared with me a year or two ago that I think is just brilliant.
+I know, but bear with me. Part of why I get like this is I am _wired_ to look at people more successful than me and compare myself to them. I could write endlessly about people I admire and could never be like. Whenever I get like this, stuck in my comparisons, I try and think about a metaphor that my friend [Jason Lengstorf](https://twitter.com/jlengstorf) shared with me a year or two ago that I think is just brilliant.
 
 When you're struggling with confidence and doubt, and perhaps feeling further behind than your peers, consider this scenario:
 
