--- a/src/posts/published/use-old-school-state/index.mdx
+++ b/src/posts/published/use-old-school-state/index.mdx
@@ -17,10 +17,10 @@ If you're like me, you've been writing React for quite some time. While I don't 
 
 This callback function was a simple way to sequence some functionality. Set some state, do something once it has happened. What if we could recreate some of that simple magic with hooks? <Marker content="It's not magic. Sadly, with code as with life, it never is." />
 
-Generally, with hooks we would have this as two parts. An instance of `React.useState` to manage the state changes, and an instance of `React.useEffect` to respond when the state changes. It might even be better to write this way!
+Generally, with hooks we would have this as two parts. An instance of `React.useState` to manage the state changes, and an instance of `React.useEffect` to respond when the state changes. It might even be better and simpler to write your code this way (hence my opening disclaimer).
 
 ```javascript
-const [state, setState] = React.useState(0)
+const [state, setState] = React.useState(/* initialState */)
 
 React.useEffect(
   () => {
@@ -29,6 +29,8 @@ React.useEffect(
   [state]
 )
 ```
+
+We can create a custom hook that encapuslates these two parts.
 
 ```jsx
 function makeQueue() {
